# modelscope_hub

./: Makefile  README.md  STUDIO_COMPARISON_SUMMARY.txt  STUDIO_GAPS_SUMMARY.csv  STUDIO_GAP_ANALYSIS.md  pyproject.toml
.github/workflows/: publish.yaml
src/modelscope_hub/: __init__.py  _cache_manager.py  _download.py  _git.py  _legacy_api.py  _openapi.py  _upload.py  api.py  config.py  constants.py  errors.py  types.py  version.py
src/modelscope_hub/agent/: __init__.py  _api.py  _cache.py  _commands.py  _defaults.py  _display.py  _merge.py  _sync.py  _watcher.py  _workspace.py
src/modelscope_hub/cli/: agent.py  base.py  cache.py  compat.py  deploy.py  download.py  login.py  main.py  mcp.py  repo.py  secret.py  upload.py
src/modelscope_hub/compat/: __init__.py  constants.py  file_download.py  hub_api.py  snapshot_download.py
src/modelscope_hub/utils/: __init__.py  file_utils.py  format.py  patterns.py  time_utils.py
tests/: .env.example  conftest.py  test_cache_verification.py  test_compat_get_model_files.py  test_compat_snapshot_download.py  test_legacy_cache_detection.py  test_upload_lfs_gate.py  test_utils.py
tests/agent/: __init__.py  test_agent_cli.py  test_agent_frameworks.py  test_cli.py  test_cli_download_convert.py  test_cli_upload.py  test_client_integration.py  test_commands.py  test_convert_targetname.py  test_merge.py  test_upload_download.py  test_watch_sync.py  test_workspace.py
tests/cli/: conftest.py  run_all.py  test_base.py  test_cache.py  test_compat.py  test_compat_cache_dir.py  test_compat_revision.py  test_deploy.py  test_download.py  test_login.py  test_main.py  test_mcp.py  test_openapi.py  test_repo.py  test_secret.py  test_upload.py
tests/integration/: conftest.py  run_all.py  test_dataset_ops.py  test_openapi.py  test_remote_file_ops.py  test_remote_repo.py  test_sdk_api.py
(+21 files in other folders)
